--- a/style.css
+++ b/style.css
@@ -25,22 +25,8 @@ header
 
 main
 	{
-		
-		border: 3px black solid;
-		border-radius: 15px;
 		background: url("images/agsquare.png") fixed;
 	}
-	
-@media screen and (max-width: 1024px)
-
-	{
-		main
-		{
-			margin-right: 5px;
-		}
-	}
-
-
 	
 h1, header p
 	{
@@ -48,41 +34,19 @@ h1, header p
 		display: inline-block;
 	}
 
-
-
-	
 h2
 	{
 		padding: 3px;
 		text-align: center;
 		color: blue;
 		width: 200px;
-
 	}
-
-@media screen and (max-width: 1024px)
-{
-	h2
-	{
-		font-size: 1.2em;
-		padding: 0px;
-	}
-}
 
 .conteneur
 {
 	max-width: 900px;
 	margin: 15px;
 	padding: 10px;
-}
-
-@media screen and (max-width: 1024px)
-{
-	.conteneur
-	{
-		margin: 0px;
-		padding: 0px;
-	}
 }
 
 .experience, .ambition, .formation
@@ -95,27 +59,10 @@ h2
 		padding:10px;
 	}
 
-@media screen and (max-width: 1024px)
-{
-	.experience, .competence, .formation
-		{
-			width: auto;
-			display: block;
-		}
-}
-
 li
 	{
 		list-style-type:circle;
 	}
-
-@media screen and (max-width: 1024px)
-{
-	li
-	{
-		font-size:0.9em;
-	}
-}
 
 footer
 	{
@@ -126,24 +73,15 @@ footer
 iframe
 	{
 		width: 50%;
-
+		vertical-align: bottom;
 		display: inline-block;
 		padding:10px;
 	}
 
-@media screen and (max-width: 1024px)
+footer div p
 	{
-		iframe
-		{
-			min-width: 350px;
-			display: block;
-		}
-	}
-	
-._mail
-	{
-		vertical-align: top;
-		margin:30px;
+		display: inline-block;
+		margin-left: 30px;
 	}
 	
 a:link {
@@ -156,3 +94,41 @@ a:hover {
   background: #003399;
   color: white;
 }
+
+@media screen and (max-width: 1024px)
+
+	{
+		main
+		{
+			margin-right: 5px;
+		}
+		
+		h2
+		{
+			font-size: 1.2em;
+			padding: 0px;
+		}
+		
+		.conteneur
+		{
+			margin: 0px;
+			padding: 0px;
+		}
+		
+		.experience, .competence, .formation
+		{
+			width: auto;
+			display: block;
+		}
+		
+			li
+		{
+			font-size:0.9em;
+		}
+		
+		iframe
+		{
+			min-width: 350px;
+			display: block;
+		}
+	}
