--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ a:hover {
 			padding: 0px;
 		}
 		
-		.experience, .competence, .formation
+		.experience, .ambition, .formation
 		{
 			width: auto;
 			display: block;
